# ibd-parser

./: .bumpversion.cfg  Makefile  README.md  ibd_parser.py  pyproject.toml
.github/workflows/: publish.yml
examples/: create_test_data.py
ibd_parser/: __init__.py  parser.py
